<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="20sp">
    <TextView
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="20sp"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/date"
           android:layout_weight="1" />

        <TextView
            android:id="@+id/date"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/date"/>

    <TextView
        android:id="@+id/description"
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/btn"
        android:layout_width="wrap_content"
        android:layout_below="@+id/description"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="end"/>
</RelativeLayout>
</ScrollView>
